[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemies/Ant_5-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ThrowerAnt.gd" type="Script" id=2]
[ext_resource path="res://Materials/NoOutline.tres" type="Material" id=3]
[ext_resource path="res://Animations/Hit.tres" type="Animation" id=4]
[ext_resource path="res://Scenes/EnemyScenes/Legs/AntLeg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Particles/Fire.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Rotater.gd" type="Script" id=7]
[ext_resource path="res://Scripts/EnemyFire.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Particles/Stun.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 27.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Legs:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Legs:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 357.56

[node name="ThrowerAnt" type="KinematicBody2D" groups=["enemies"]]
pause_mode = 1
z_index = 1
script = ExtResource( 2 )
maxHp = 400.0
aimOffset = 3.0
aimOffsetTimer = 5.0
stunParts = ExtResource( 9 )
maxLegDist = 117.0
closestDistance = 150.0
fireDmg = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
hframes = 8

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 4 )
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Legs" type="Node2D" parent="."]
material = ExtResource( 3 )

[node name="Leg" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 6, -3 )

[node name="Leg2" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 3, 3 )
flipped = false

[node name="Leg3" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 8, 23 )

[node name="Leg4" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( -6, -3 )
flipped = false

[node name="LegUpdaters" type="Node2D" parent="."]

[node name="LegUpd" type="Position2D" parent="LegUpdaters"]
position = Vector2( 30, -14 )

[node name="LegUpd2" type="Position2D" parent="LegUpdaters"]
position = Vector2( 30, 18 )

[node name="LegUpd3" type="Position2D" parent="LegUpdaters"]
position = Vector2( -40, -24 )

[node name="LegUpd4" type="Position2D" parent="LegUpdaters"]
position = Vector2( -40, 8 )

[node name="Rotater" type="Node2D" parent="."]
script = ExtResource( 7 )
maxDeg = 45.0
rotSpd = 70.0

[node name="Fire" parent="Rotater" instance=ExtResource( 6 )]
position = Vector2( 0, -24 )
amount = 75
spread = 5.0
initial_velocity = 425.0

[node name="EnemyFireArea" type="Area2D" parent="Rotater"]
position = Vector2( 274, -879 )
rotation = -0.189929
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rotater/EnemyFireArea"]
position = Vector2( -387.815, 833.265 )
rotation = 0.154869
scale = Vector2( 74.613, 210.647 )
polygon = PoolVector2Array( -0.316982, -0.790078, -0.460311, -0.426093, -0.578969, -0.175807, -0.726776, -0.172893, -0.807152, -0.444653, -0.81304, -0.79149 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Rotater/EnemyFireArea" to="Rotater/EnemyFireArea" method="_on_EnemyFireArea_body_entered"]
[connection signal="body_exited" from="Rotater/EnemyFireArea" to="Rotater/EnemyFireArea" method="_on_EnemyFireArea_body_exited"]
